# image-resizer

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/: CODEOWNERS
.github/workflows/: push-registry-dev.yaml  push-registry.yaml  service-ci.yaml
service/: Cargo.toml  Dockerfile
service/src/: bucket_client.rs  cache.rs  dimension.rs  error.rs  image_service.rs  main.rs  response_handler.rs  router.rs  service.rs
service/src/client/: bucket_client.rs  mod.rs
service/src/domain/: dimension.rs  error.rs  mod.rs
service/src/domain/server_timing/: mod.rs
service/src/logging/: encoder.rs  log_message.rs  mod.rs
service/src/observability/: mod.rs  propagators.rs
service/src/repository/: bucket_repository.rs  cache_repository.rs  mod.rs  volume_repository.rs
service/src/server_timing/: mod.rs  timing.rs
