[package]
name = "service"
version = "0.0.10"
edition = "2021"
default-run = "service"
authors.workspace = true

[dependencies]
image = { version = "0.25.4", features = ["rayon"] }
fast_image_resize = { version = "5.0.0", features = ["image"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.12"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.9", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
rustls = "0.23.16"
reqwest = { version = "0.12.9", features = ["http2", "rustls-tls"] }
chrono = "0.4.38"
serde = { version = "1.0.214", features = ["derive"] }
anyhow = "1.0.91"
serde_json = "1.0.132"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-stdout = "0.27.0"
log = "0.4.22"
