[package]
name = "service"
version = "0.0.10"
edition = "2021"
default-run = "service"
authors.workspace = true

[dependencies]
image = { version = "0.25.5", features = ["rayon"] }
fast_image_resize = { version = "5.0.0", features = ["image"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
rustls = { version = "0.23.19", features = ["ring"] }
reqwest = { version = "0.12.9", features = ["http2", "rustls-tls"] }
chrono = "0.4.38"
anyhow = "1.0.94"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "json"] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-stdout = "0.27.0"
tracing-stackdriver = { version = "0.10.0", features = ["opentelemetry"] }
opentelemetry-stackdriver = { version = "0.24.0" }
